@@ -1,5 +1,12 @@
 2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* Make-lang.in (cp/mangle.o): Depend on target.h
+	* mangle.c: #include target.h.
+	(write_expression): Use cxx_expr_decl_mangling to determine how to
+	mangle DECL nodes.
+
+2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* class.c (check_methods): Move virtual destructor to end of
 	method list, if abi_cxx_vdp_declared_last.
 	(create_vtable_ptr): Move virtual destructors to end of vtable if 
