@@ -1,3 +1,7 @@
+2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/abi/hpux-1.C: New test.
+
 2003-11-16  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* gcc.dg/cpp/assert4.c: New test.
