@@ -1,5 +1,14 @@
 2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
 
+	* target.h (gcc_target.abi): Add cxx_expr_decl_mangling member.
+	* target-def.h (TARGET_ABI_CXX_EXPR_DECL_MANGLING): New
+	(TARGET_ABI): Add new initializer.
+	* config/ia64/ia64.c (TARGET_ABI_CXX_EXPR_DECL_MANGLING): Override
+	on HPUX.
+	* doc/tm.text (TARGET_ABI_CXX_EXPR_DECL_MANGLING): Document.
+
+2003-11-30  Nathan Sidwell  <nathan@codesourcery.com>
+
 	* target.h (gcc_target): Add abi structure.
 	* target-def.h (TARGET_ABI_CXX_VIRTUAL_DTORS_POSITION): New.
 	(TARGET_ABI): New.
